finished the resume part

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             </div>
         </section>
         <!-- resume section -->
-        <h3 class="section-title">A summary of My Resume</h3>
+        <section>
+            <h3 class="section-title">A summary of My Resume</h3>
         <div class="resume-container">
             <div class="resume-column">
                 <h3 class="resume-column-title">My Education</h3>
@@ -137,6 +138,10 @@
                
             </div>
         </div>
+        <div class="download-cv">
+            <button class="btn-primary">Download Cv</button>
+        </div>
+        </section>
     </main>
     <footer>
 
